# poly_series

./: Cargo.toml  README.md  flake.nix  justfile
src/: lib.rs  scaling.rs
src/series/: mod.rs
src/series/chebyshev/: coeff.rs  domain.rs  error.rs  fitting.rs  integrate.rs  interpolate.rs  mod.rs  ops.rs  roots.rs  truncate.rs
src/series/chebyshev/coefficients/: c_series.rs  mod.rs  z_series.rs
src/traits/: coefficients.rs  conversion.rs  domain.rs  evaluate.rs  fitting.rs  integration.rs  interpolation.rs  mod.rs  root.rs  truncation.rs
